--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="https://brege.org/portrait.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aoife</title>
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <title>aoife</title>
   </head>
   <body>
     <div id="root"></div>
